# learn-rust

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
clis/storage-cli/: Cargo.toml  README.md
clis/storage-cli/examples/: app-template.toml
clis/storage-cli/src/: conf.rs  default.toml  lib.rs  operators.rs  utils.rs
clis/storage-cli/src/cmd/: devops_cmd.rs  file_operation.rs  mod.rs
proc-macro-workshop/: README.md
proc-macro-workshop/derive_builder/: Cargo.toml
proc-macro-workshop/derive_builder/src/: builder1.rs  builder2.rs  builder3.rs  builder4.rs  builder5.rs  builder6.rs  builder7.rs  builder9.rs  helper.rs  lib.rs
proc-macro-workshop/derive_builder/tests/: 01-parse.rs  02-create-builder.rs  03-call-setters.rs  04-call-build.rs  05-method-chaining.rs  06-optional-field.rs  07-repeated-field.rs  08-unrecognized-attribute.rs  08-unrecognized-attribute.stderr  09-redefined-prelude-types.rs  progress.rs
proc-macro-workshop/seq/: Cargo.toml
proc-macro-workshop/seq/src/: bounds.rs  expand.rs  lib.rs  parse.rs
proc-macro-workshop/seq/tests/: progress.rs
