[package]
name = "storage-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
# workspace = true

[dependencies]
serde.workspace = true
clap.workspace = true
tokio = { version = "1", default-features = false, features = [
    "rt-multi-thread",
    "macros",
] }
opendal = { version = "0.47", features = ["services-obs", "services-oss"] }
anyhow.workspace = true
config = { version = "0.14", default-features = false, features = ["toml"] }
bytes.workspace = true
futures.workspace = true
logforth.workspace = true
log.workspace = true
